documentation on dashboard

--- a/twitter-topics.ipynb
+++ b/twitter-topics.ipynb
@@ -89,6 +89,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tweets Runterladen\n",
+    "\n",
+    "Lade Tweets aus deutschsprachigem Raum für den angegebenen Zeitraum, die keywords enthalten.\n",
+    "\n",
+    "Wenn maxTweets auf 0 gesetzt ist, wird versucht alle zu holen. Das kann dauern, und manchmal ist man danach gedrosselt. \n",
+    "\n",
+    "Klicke ``Run Interact`` button zum ausführen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -140,19 +153,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tweets Analysieren\n",
+    "\n",
+    "- ``text_source``: Wähle, ob Text aus tweets oder den in tweets verlinkten Artikeln analysiert werden soll. \n",
+    "- ``analysis``: Wähle ob Häufigkeit einzelner Worte oder Topics analysiert werden.\n",
+    "- ``n_top_words``: wie viele Worte berücksichtigt werden oder bei Topic Analysis, wieviele Wòrter angezeigt werden\n",
+    "- ``topic_model``: Art des Topic Models (Latent Dirichlet Allocation oder Nonnegative Matrix Factorization)\n",
+    "- ``num_topics``: Wie viele Topics extrahiert werden soll.\n",
+    "\n",
+    "Klicke ``Run Interact`` button zum ausführen."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "223ed7fd7ed94048870a806ca4c3970f",
+       "model_id": "c5ee9b1ad669435b87986bcf9498aadf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=10, description='num_topics', max=20, min=2), Dropdown(description='text…"
+       "interactive(children=(Dropdown(description='text_source', options=('tweets', 'urls in tweets'), value='tweets'…"
       ]
      },
      "metadata": {},
@@ -167,11 +195,11 @@
     "                         topic_model=['LDA','NMF']\n",
     "                        )\n",
     "def plot_tweets(\n",
-    "         num_topics=10,\n",
     "         text_source='tweets',\n",
     "         analysis='topic model',\n",
     "         n_top_words=5,\n",
-    "         topic_model='NMF'\n",
+    "         topic_model='NMF',\n",
+    "         num_topics=10    \n",
     "        ):\n",
     "    df = DF.copy(deep=True)\n",
     "    if len(df) == 0:\n",
