now with tweets

--- a/twitter-topics.ipynb
+++ b/twitter-topics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,16 @@
     "plt.style.use('ggplot')\n",
     "\n",
     "global KEYWORDS\n",
-    "global DF"
+    "global DF\n",
+    "global ANALYSIS\n",
+    "global TEXT_SOURCE\n",
+    "global WORDS\n",
+    "global TOPICS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -111,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f93b89e7933a4730a10e9637db1eb5cb",
+       "model_id": "326fa6cf52e84d1ca2bb88499c02be87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,7 +165,7 @@
     "- ``text_source``: Wähle, ob Text aus tweets oder den in tweets verlinkten Artikeln analysiert werden soll. \n",
     "- ``analysis``: Wähle ob Häufigkeit einzelner Worte oder Topics analysiert werden.\n",
     "- ``n_top_words``: wie viele Worte berücksichtigt werden oder bei Topic Analysis, wieviele Wòrter angezeigt werden\n",
-    "- ``topic_model``: Art des Topic Models (Latent Dirichlet Allocation oder Nonnegative Matrix Factorization)\n",
+    "- ``topic_model``: Art des Topic Models (Latent Dirichlet Allocation oder Nonnegative Matrix Factorization) - wird ignoriert, wnen ``analysis`` auf ``wordcount`` gesetzt ist\n",
     "- ``num_topics``: Wie viele Topics extrahiert werden soll.\n",
     "\n",
     "Klicke ``Run Interact`` button zum ausführen."
@@ -169,13 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5ee9b1ad669435b87986bcf9498aadf",
+       "model_id": "577efe537fff4249b1c892018a7185f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,12 +205,17 @@
     "         topic_model='NMF',\n",
     "         num_topics=10    \n",
     "        ):\n",
-    "    df = DF.copy(deep=True)\n",
-    "    if len(df) == 0:\n",
+    "    global DF\n",
+    "    global TOPICS\n",
+    "    global ANALYSIS \n",
+    "    ANALYSIS = analysis\n",
+    "    global TEXT_SOURCE\n",
+    "    TEXT_SOURCE = text_source\n",
+    "    if len(DF) == 0:\n",
     "        print(\"Get some tweets first.\")\n",
     "        return\n",
     "    else:\n",
-    "        print(f\"Analysing {len(df)} {text_source} with {analysis}, exluding keywords: {KEYWORDS}\")\n",
+    "        print(f\"Analysing {len(DF)} {text_source} with {analysis}, exluding keywords: {KEYWORDS}\")\n",
     "        \n",
     "        if text_source == 'tweets':\n",
     "            text_col = 'text'\n",
@@ -214,24 +223,117 @@
     "            text_col = 'url_text'\n",
     "            \n",
     "        if analysis == 'topic model':\n",
-    "            df['topics'], text_topics = get_topics(df[text_col], \n",
+    "            DF['topic'], TOPICS = get_topics(DF[text_col], \n",
     "                                                    n_components=num_topics, \n",
     "                                                    n_top_words=n_top_words,\n",
     "                                                    keywords=KEYWORDS,\n",
     "                                                    topic_model=topic_model\n",
     "                                                  )\n",
-    "            pd.get_dummies(df['topics']).resample('D').sum().plot(marker='o')\n",
-    "            plt.legend([f'Topic {idx}: {text[:10]} ...' for idx, text in enumerate(text_topics)]);\n",
-    "            print(\"\\n\".join([f'Topic {idx}: {text}' for idx, text in enumerate(text_topics)]))\n",
+    "            pd.get_dummies(DF['topic']).resample('D').sum().plot(marker='o')\n",
+    "            plt.legend([f'Topic {idx}: {text[:10]} ...' for idx, text in enumerate(TOPICS)]);\n",
+    "            print(\"\\n\".join([f'Topic {idx}: {text}' for idx, text in enumerate(TOPICS)]))\n",
     "        elif analysis == 'wordcounts':\n",
-    "            word_counts, words = get_top_word_counts(df[text_col],  \n",
+    "            word_counts, words = get_top_word_counts(DF[text_col],  \n",
     "                                                     n_top_words=n_top_words,\n",
     "                                                    keywords=KEYWORDS)\n",
-    "            \n",
+    "            global TOP_WORDS\n",
+    "            TOP_WORDS = words\n",
     "            pd.DataFrame(word_counts.toarray(), \n",
-    "                         index=df.index, \n",
-    "                         columns=words).resample('D').sum().plot(marker='o')"
+    "                         index=DF.index, \n",
+    "                         columns=words).resample('D').sum().plot(marker='o')\n",
+    "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "578457b070794583943c2539da742e5f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Select(description='contains', options=('All', 'corona', 'coronavirus', 'coronavirusde',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.html.widgets import interactive\n",
+    "\n",
+    "df = DF.copy(deep=True)\n",
+    "if TEXT_SOURCE == 'tweets':\n",
+    "    text_col = 'text'\n",
+    "elif TEXT_SOURCE == 'urls in tweets':\n",
+    "    text_col = 'url_text'\n",
+    "\n",
+    "if ANALYSIS == 'wordcounts':\n",
+    "    items = ['All'] + sorted(TOP_WORDS)\n",
+    "elif ANALYSIS == 'topic model':\n",
+    "    items = ['All'] + [f'{idx}: {text[:20]} ...' for idx, text in enumerate(TOPICS)]\n",
+    "    \n",
+    "def make_clickable(val):\n",
+    "    # target _blank to open new window\n",
+    "    return '<a target=\"_blank\" href=\"{}\">{}</a>'.format(val, val)\n",
+    "    \n",
+    "def view(contains=''):\n",
+    "    if contains=='All': \n",
+    "        print(f'Showing all {len(df)} tweets')\n",
+    "        display(df.loc[:,['username','to','text','permalink']].style.format({'permalink': make_clickable}))\n",
+    "    elif ANALYSIS == 'wordcounts':\n",
+    "        idx = df[text_col].str.lower().str.contains(contains.lower())\n",
+    "        print(f'Found {idx.sum()} tweets')\n",
+    "        display(df.loc[idx,['username','to','text','permalink']].style.format({'permalink': make_clickable}))\n",
+    "    elif ANALYSIS == 'topic model':\n",
+    "        idx = df['topic'] == int(contains[:contains.find(':')])\n",
+    "        print(f'Found {idx.sum()} tweets')\n",
+    "        display(df.loc[idx,['username','to','text','topic','permalink']].style.format({'permalink': make_clickable}))\n",
+    "\n",
+    "w = widgets.Select(options=items)\n",
+    "interactive(view, contains=w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = [f'{idx}: {text[:10]} ...' for idx, text in enumerate(TOPICS)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(aa[0][:aa[0].find(':')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
