--- a/twitter-topics.ipynb
+++ b/twitter-topics.ipynb
@@ -96,7 +96,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tweets Runterladen\n",
+    "# Twitter Analyse mit Topic Models (oder ohne)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tweets Runterladen\n",
     "\n",
     "Lade Tweets aus deutschsprachigem Raum für den angegebenen Zeitraum, die keywords enthalten.\n",
     "\n",
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -115,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "326fa6cf52e84d1ca2bb88499c02be87",
+       "model_id": "884af99fe253488ea1684356a7a56e70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tweets Analysieren\n",
+    "## Tweets Analysieren\n",
     "\n",
     "- ``text_source``: Wähle, ob Text aus tweets oder den in tweets verlinkten Artikeln analysiert werden soll. \n",
     "- ``analysis``: Wähle ob Häufigkeit einzelner Worte oder Topics analysiert werden.\n",
@@ -245,6 +252,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tweets Anschauen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -298,42 +312,6 @@
     "w = widgets.Select(options=items)\n",
     "interactive(view, contains=w)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa = [f'{idx}: {text[:10]} ...' for idx, text in enumerate(TOPICS)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(aa[0][:aa[0].find(':')])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
