added ipython requirement

--- a/twitter-topics.ipynb
+++ b/twitter-topics.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "## Tweets Runterladen\n",
     "\n",
-    "Lade Tweets aus deutschsprachigem Raum für den angegebenen Zeitraum, die keywords enthalten.\n",
+    "Lade Tweets aus deutschsprachigem Raum für den angegebenen Zeitraum, die die angegebenen keywords enthalten.\n",
     "\n",
     "Wenn maxTweets auf 0 gesetzt ist, wird versucht alle zu holen. Das kann dauern, und manchmal ist man danach gedrosselt. \n",
     "\n",
