get_tweets for ipython

--- a/twitter-topics.ipynb
+++ b/twitter-topics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from ipywidgets import widgets\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "from datetime import datetime\n",
     "\n",
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'svg'\n",
@@ -750,14 +751,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading manifesto/manifesto-Germany.csv\n",
+      "Fitting 2 folds for each of 3 candidates, totalling 6 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   3 out of   6 | elapsed:    3.0s remaining:    3.0s\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of   6 | elapsed:    3.0s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 3 candidates, totalling 6 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   3 out of   6 | elapsed:    0.8s remaining:    0.8s\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of   6 | elapsed:    1.4s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 3 candidates, totalling 6 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   3 out of   6 | elapsed:    5.1s remaining:    5.1s\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of   6 | elapsed:    5.2s finished\n"
+     ]
+    }
+   ],
    "source": [
     "from classifier import *\n",
     "train_all()\n",
-    "score_texts()\n",
-    "get_keywords(label='manifestolabel', top_what=100)"
+    "score_texts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_keywords(label='manifestolabel', top_what=200)"
    ]
   }
  ],
